--- a/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
+++ b/AIML_Module_1_Lab_1_Extracting_features_from_data_.ipynb
@@ -683,7 +683,7 @@
         "\n",
         "1. Upon using different langueages, it only becomes more evident that bigram frequency is a good feature for distinguishing languages not topics. I speculate this is because each language (and not topic) has it's own unique syntax and etymology.\n",
         "2. Using different topics or a different source will get us more or less the same result as the frequency of bigrams depends largely on the language and not the topic or source.\n",
-        "3."
+        "3. Higher n-grams can be visualized by useing pair plots, facet plots and heatmaps."
       ],
       "metadata": {
         "id": "5-LUbOJvc8lI"
@@ -1374,6 +1374,21 @@
         "4. Will these features work for different classes other than 0 and 1?\n",
         "5. What will happen if we take more that two classes at a time?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Answers:\n",
+        "\n",
+        "1. Although the combinations of 2 features gives relatively clear decision boundaries, the best combination of features will be all 3. This is because it takes in account more discrepencies and dirregularities that come with handwriting and generates a clean decision boundary as seen in the graph.\n",
+        "2. Visualizing 4 or more features can be done by using facet plots, heatmaps, pair plots etc.\n",
+        "3. One feature we can use is symmetry. It can be seen that 0 has more axes of symmetry than 1.\n",
+        "4. Yes, this feature can be used on classes other than 0 and 1.\n",
+        "5. If we take more than 2 classes at a time, the comparisons might get more complex as there will be more data that needs to be analyzed at once. However, with modern computing standards, it is possible (upto a certain extent).   "
+      ],
+      "metadata": {
+        "id": "1mLp-z0s2Yvw"
+      }
     }
   ]
 }
