--- a/AIML_Module_1_Lab_2_Machine_learning_terms_and_metrics.ipynb
+++ b/AIML_Module_1_Lab_2_Machine_learning_terms_and_metrics.ipynb
@@ -71,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9bca61d-c937-48d8-c7af-1d77e09d86ab"
+        "outputId": "534fbd34-1f1e-42b2-fd5d-c94acabea907"
       },
       "source": [
         "dataset =  datasets.fetch_california_housing()\n",
@@ -81,7 +81,7 @@
         "print(dataset.data.shape)\n",
         "print(dataset.target.shape)"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-4-d89ecb46a347>:4: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+            "<ipython-input-2-d89ecb46a347>:4: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
             "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
             "  dataset.target = dataset.target.astype(np.int) # so that we can classify\n"
           ]
@@ -178,7 +178,7 @@
         "  predlabel = np.array([NN1(traindata, trainlabel, i) for i in testdata])\n",
         "  return predlabel"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
         "  predlabel = classes[rints]\n",
         "  return predlabel"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "  correct = (gtlabel==predlabel).sum() # count the number of times the groundtruth label is equal to the predicted label.\n",
         "  return correct/len(gtlabel)"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
         "  split2label = label[split2]\n",
         "  return split1data, split1label, split2data, split2label"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "662ff999-5bf5-4b84-e111-a33d267171ba"
+        "outputId": "1e618065-b690-4662-98b5-57645595f6a9"
       },
       "source": [
         "testdata, testlabel, alltraindata, alltrainlabel = split(dataset.data, dataset.target, 20/100)\n",
@@ -283,7 +283,7 @@
         "print('Number of other samples = ', len(alltrainlabel))\n",
         "print('Percent of test data = ', len(testlabel)*100/len(dataset.target),'%')"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
       "source": [
         "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 75/100)"
       ],
-      "execution_count": 11,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9c3a5967-6c36-4225-9a19-b7ce89fe32fb"
+        "outputId": "b7b69c04-cf95-427b-bf7f-6a6787bc4d43"
       },
       "source": [
         "trainpred = NN(traindata, trainlabel, traindata)\n",
@@ -345,14 +345,14 @@
         "trainAccuracy = Accuracy(trainlabel, trainpred)\n",
         "print(\"Train accuracy using random classifier is \", trainAccuracy)"
       ],
-      "execution_count": 12,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Train accuracy using nearest neighbour is  1.0\n",
-            "Train accuracy using random classifier is  0.164375808538163\n"
+            "Train accuracy using random classifier is  0.16843288375080281\n"
           ]
         }
       ]
@@ -375,25 +375,28 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c987ab96-f765-4074-fb34-2fa1ee818e74"
+        "outputId": "2536d358-1d97-4671-8a77-04cdd63810fd"
       },
       "source": [
         "valpred = NN(traindata, trainlabel, valdata)\n",
-        "valAccuracy = Accuracy(vallabel, valpred)\n",
-        "print(\"Validation accuracy using nearest neighbour is \", valAccuracy)\n",
+        "valAccuracy_NN = Accuracy(vallabel, valpred)\n",
+        "print(\"Validation accuracy using nearest neighbour is \", valAccuracy_NN)\n",
         "\n",
         "valpred = RandomClassifier(traindata, trainlabel, valdata)\n",
-        "valAccuracy = Accuracy(vallabel, valpred)\n",
-        "print(\"Validation accuracy using random classifier is \", valAccuracy)"
+        "valAccuracy_RC = Accuracy(vallabel, valpred)\n",
+        "print(\"Validation accuracy using random classifier is \", valAccuracy_RC)\n",
+        "\n",
+        "print(\"Difference in accuracy: \", valAccuracy_NN - valAccuracy_RC)"
       ],
-      "execution_count": 13,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Validation accuracy using nearest neighbour is  0.34108527131782945\n",
-            "Validation accuracy using random classifier is  0.1688468992248062\n"
+            "Validation accuracy using nearest neighbour is  0.3383663366336634\n",
+            "Validation accuracy using random classifier is  0.16955445544554457\n",
+            "Difference in accuracy:  0.16881188118811882\n"
           ]
         }
       ]
@@ -416,7 +419,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b44bd92d-431b-44f6-c8d6-3aaa56f9dd5c"
+        "outputId": "15eb67bd-a925-4504-b327-461257b0b257"
       },
       "source": [
         "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 75/100)\n",
@@ -424,13 +427,13 @@
         "valAccuracy = Accuracy(vallabel, valpred)\n",
         "print(\"Validation accuracy of nearest neighbour is \", valAccuracy)"
       ],
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Validation accuracy of nearest neighbour is  0.33925097276264593\n"
+            "Validation accuracy of nearest neighbour is  0.34048257372654156\n"
           ]
         }
       ]
@@ -454,19 +457,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edc93796-f51a-4b46-d874-4aa8d10fa793"
+        "outputId": "08bb008b-5f56-4b32-96d3-92522f0ac66e"
       },
       "source": [
+        "traindata, trainlabel, valdata, vallabel = split(alltraindata, alltrainlabel, 1/100)\n",
+        "valpred = NN(traindata, trainlabel, valdata)\n",
+        "valAccuracy = Accuracy(vallabel, valpred)\n",
+        "print(\"Validation accuracy of nearest neighbour is \", valAccuracy)\n",
+        "\n",
+        "\n",
         "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
         "testAccuracy = Accuracy(testlabel, testpred)\n",
         "print('Test accuracy is ', testAccuracy)"
       ],
-      "execution_count": 16,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Validation accuracy of nearest neighbour is  0.27816190417915926\n",
             "Test accuracy is  0.34917953667953666\n"
           ]
         }
@@ -485,6 +495,108 @@
         "\n",
         "Answer for both nearest neighbour and random classifier. You can note down the values for your experiments and plot a graph using  <a href=https://matplotlib.org/stable/gallery/lines_bars_and_markers/step_demo.html#sphx-glr-gallery-lines-bars-and-markers-step-demo-py>plt.plot<href>. Check also for extreme values for splits, like 99.9% or 0.1%"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.\n",
+        "\n",
+        "for 75% split:\n",
+        "\n",
+        "Validation accuracy using nearest neighbour is  0.3383663366336634\n",
+        "\n",
+        "Validation accuracy using random classifier is  0.16955445544554457\n",
+        "\n",
+        "Difference in accuracy:  0.16881188118811882\n",
+        "\n",
+        "for 50% spilt:\n",
+        "\n",
+        "Validation accuracy using nearest neighbour is  0.3368319459524671\n",
+        "\n",
+        "Validation accuracy using random classifier is  0.17046688382193267\n",
+        "\n",
+        "Difference in accuracy:  0.16636506213053445\n",
+        "\n",
+        "\n",
+        "for 99% split:\n",
+        "\n",
+        "Validation accuracy using nearest neighbour is  0.3525641025641026\n",
+        "\n",
+        "Validation accuracy using random classifier is  0.14102564102564102\n",
+        "\n",
+        "Difference in accuracy:  0.21153846153846156\n",
+        "\n",
+        "for 1% split:\n",
+        "\n",
+        "Validation accuracy using nearest neighbour is  0.258151507722481\n",
+        "\n",
+        "Validation accuracy using random classifier is  0.1660333415052709\n",
+        "\n",
+        "Difference in accuracy:  0.09211816621721011\n",
+        "\n",
+        "for 20% split:\n",
+        "\n",
+        "Validation accuracy using nearest neighbour is  0.305542935029532\n",
+        "\n",
+        "Validation accuracy using random classifier is  0.17204301075268819\n",
+        "\n",
+        "Difference in accuracy:  0.13349992427684382\n",
+        "\n",
+        "\n",
+        "We can see that the distribution of split is almost directly proportional to the accuracy of the validation set. Therefore it can be safe to assume that increasing the percentage of validation set will increase the accuracy of the validation set.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "U0nFMUDaSi88"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2.\n",
+        "\n",
+        "\n",
+        "Test accuracy is  0.34917953667953666\n",
+        "\n",
+        "for 75% split:\n",
+        "\n",
+        "Validation accuracy of nearest neighbour is  0.33939542885229784\n",
+        "\n",
+        "for 50% split:\n",
+        "\n",
+        "Validation accuracy of nearest neighbour is  0.3255701115963125\n",
+        "\n",
+        "for 20% split:\n",
+        "\n",
+        "Validation accuracy of nearest neighbour is  0.3060882800608828\n",
+        "\n",
+        "for 99% split:\n",
+        "\n",
+        "Validation accuracy of nearest neighbour is  0.3770491803278688\n",
+        "\n",
+        "for 1% split:\n",
+        "\n",
+        "Validation accuracy of nearest neighbour is  0.27816190417915926\n",
+        "\n",
+        "\n",
+        "From these various experiments it can be seen that the 75% split for validation data is the closest to the test data.\n",
+        "So it is evident that that split of data can predict the accuracy on the test set well. Splitting the data in extreme ways (such as 1% or 99%) does not fare well when used to predict the accuracy of the test data."
+      ],
+      "metadata": {
+        "id": "OxmeeS_pX1On"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.\n",
+        "\n",
+        "Therefore considering the two factors, I think 75% - 80% is a good percentage to reserve for the validation set."
+      ],
+      "metadata": {
+        "id": "bmUDDXx7a4UA"
+      }
     },
     {
       "cell_type": "markdown",
@@ -512,7 +624,7 @@
         "    accuracy += Accuracy(vallabel, valpred)\n",
         "  return accuracy/iterations # average of all accuracies"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -522,20 +634,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d78a55cb-8dc8-43f4-e0fd-e9f3aae38368"
+        "outputId": "8fdac478-9ca5-4877-80e4-7508d51f3c56"
       },
       "source": [
-        "print('Average validation accuracy is ', AverageAccuracy(alltraindata, alltrainlabel, 75/100, 10, classifier=NN))\n",
+        "print('Average validation accuracy is ', AverageAccuracy(alltraindata, alltrainlabel, 75/100, 20, classifier=NN))\n",
         "testpred = NN(alltraindata, alltrainlabel, testdata)\n",
         "print('test accuracy is ',Accuracy(testlabel, testpred) )"
       ],
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average validation accuracy is  0.33584635395170215\n",
+            "Average validation accuracy is  0.34018356373941294\n",
             "test accuracy is  0.34917953667953666\n"
           ]
         }
@@ -555,6 +667,21 @@
         "3. What is the effect of the number of iterations on the estimate? Do we get a better estimate with higher iterations?\n",
         "4. Consider the results you got for the previous questions. Can we deal with a very small train dataset or validation dataset by increasing the iterations?\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Yes, it appears as if averaging the validation accuracy across multiple splits give more consistent results.\n",
+        "\n",
+        "2. Yes, but it more or less depends on the number of iterations.\n",
+        "\n",
+        "3. Increasing the number of iterations gives only a slightly better estimate than lower number of iterations. Lower number of iterations (like 5) gives a more accurate estimate than slightly higher number of iterations (like 10). However, higher number of iterations (like 20) performs better than lower numbers (like 10) but performs less better than 5 iterations.\n",
+        "\n",
+        "4. No, I do not think we can deal with a VERY small train or validation dataset just by incresing the number of iterations. We need a good amount of data and a suitable number of iterations to get accurate and useful results.  "
+      ],
+      "metadata": {
+        "id": "uJNlpH4Dhsvk"
+      }
     }
   ]
 }
