--- a/AIML_Module_1_Lab_3_Data_Augmentation.ipynb
+++ b/AIML_Module_1_Lab_3_Data_Augmentation.ipynb
@@ -51,7 +51,7 @@
         "from skimage.transform import rotate, AffineTransform, warp\n",
         "import math"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b24f7c89-5543-4083-9118-0d308fe01be9"
+        "outputId": "61ba3045-ae99-42b8-afa9-543cd5c7bd33"
       },
       "source": [
         "#loading the dataset\n",
@@ -83,7 +83,7 @@
         "train_X = train_X[::1200,:,:].copy() # subsample. Otherwise it will take too long!\n",
         "train_y = train_y[::1200].copy() # do the same to the labels"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "  correct = (gtlabel==predlabel).sum() # count the number of times the groundtruth label is equal to the predicted label.\n",
         "  return correct/len(gtlabel)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -151,13 +151,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bf96cc59-cd7b-4236-cb33-a285c5889a8e"
+        "outputId": "2883f101-f554-49f0-ca68-1e29a157f281"
       },
       "source": [
         "testpred = NN(train_X, train_y, test_X)\n",
         "print('Baseline accuracy without augmentation is ', Accuracy(test_y, testpred))"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,16 +187,16 @@
         "id": "z5WolJ9fZE7L",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 861
+          "height": 860
         },
-        "outputId": "87d10772-e312-46e4-c902-fa10f698fe68"
+        "outputId": "94a1266e-bf31-41ac-dfa4-935ce6383752"
       },
       "source": [
         "plt.imshow(train_X[2], cmap='gray')\n",
         "plt.show()\n",
         "plt.imshow(rotate(train_X[2],25), cmap='gray')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -212,7 +212,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7ffd5b19c0>"
+              "<matplotlib.image.AxesImage at 0x7e9c9d396080>"
             ]
           },
           "metadata": {},
@@ -257,7 +257,7 @@
         "    nsample[ii] = rotate(sample[ii], angle[ii])\n",
         "  return np.squeeze(nsample) # take care if the input had only one sample."
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -275,9 +275,9 @@
         "id": "Vw3O9zGFgI8K",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 640
+          "height": 639
         },
-        "outputId": "dffc1a44-a230-40da-dac6-327466d55131"
+        "outputId": "7910da57-982d-4b9f-e1e9-7efa146e2211"
       },
       "source": [
         "sample = train_X[20]\n",
@@ -292,7 +292,7 @@
         "plt.subplot(1,3,3)\n",
         "plt.imshow(augRotate(sample, angleconstraint), cmap='gray') # one more image from the same sample"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -308,7 +308,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7ffd4a9270>"
+              "<matplotlib.image.AxesImage at 0x7e9c9d46d540>"
             ]
           },
           "metadata": {},
@@ -342,7 +342,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7dc07fcc-aac8-4243-c046-8bec9095edd0"
+        "outputId": "18759894-bd72-4f78-ff5a-d69fa94a62bf"
       },
       "source": [
         "# hyperparameters\n",
@@ -360,7 +360,7 @@
         "testpred = NN(augdata, auglabel, test_X)\n",
         "print('Accuracy after rotation augmentation is ', Accuracy(test_y, testpred))"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +387,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1ddccdcd-501d-4815-cb07-318a6bfd235f"
+        "outputId": "b4947d7c-2f9f-4d64-995b-40046e209c0f"
       },
       "source": [
         "angleconstraints = [0,10,20,30,40,50,60,70,80,90] # the values we want to test\n",
@@ -406,7 +406,7 @@
         "  accuracies[ii] = Accuracy(test_y, testpred)\n",
         "  print('Accuracy after rotation augmentation constrained by ',angleconstraints[ii], ' is ', accuracies[ii], flush=True)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,9 +450,9 @@
         "id": "LqthJa_pmMHz",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 486
+          "height": 485
         },
-        "outputId": "81730fdf-8ebb-4161-e276-29c1d54b3c8c"
+        "outputId": "7665f0a0-2812-489a-c763-e0226c40731b"
       },
       "source": [
         "fig = plt.figure()\n",
@@ -465,13 +465,13 @@
         "maxind = np.argmax(accuracies)\n",
         "plt.scatter(angleconstraints[maxind], accuracies[maxind], c='red')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f7ffd3e83d0>"
+              "<matplotlib.collections.PathCollection at 0x7e9c9d1c49a0>"
             ]
           },
           "metadata": {},
@@ -516,7 +516,7 @@
         "    img = np.roll(img, (xshift, yshift),(0,1))\n",
         "  return img"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -525,9 +525,9 @@
         "id": "4_u_EYpmnABK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 861
+          "height": 860
         },
-        "outputId": "03d804ac-97ad-4318-dc0c-1e881c5c294f"
+        "outputId": "f2f76404-3bbd-4d4d-df1d-973490e6d1c6"
       },
       "source": [
         "sample = train_X[2]\n",
@@ -537,7 +537,7 @@
         "# apply shear\n",
         "plt.imshow(shear(sample, 0.4), cmap='gray')"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -553,7 +553,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7ffd26e140>"
+              "<matplotlib.image.AxesImage at 0x7e9c9d24a890>"
             ]
           },
           "metadata": {},
@@ -598,7 +598,7 @@
         "    nsample[ii] = shear(sample[ii], amt[ii])\n",
         "  return np.squeeze(nsample) # take care if the input had only one sample."
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -617,7 +617,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05c81213-798a-4f4b-c127-3dd5e4a77c64"
+        "outputId": "8b33e18b-cab6-4c4f-c218-ceb504dbf8e2"
       },
       "source": [
         "shearconstraints = [0, 0.2,0.4,0.6,0.8,1.0,1.2,1.4,1.6,1.8,2.0] # the values we want to test\n",
@@ -636,7 +636,7 @@
         "  accuracies[ii] = Accuracy(test_y, testpred)\n",
         "  print('Accuracy after shear augmentation constrained by ',shearconstraints[ii], ' is ', accuracies[ii], flush=True)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,9 +672,9 @@
         "id": "EKaH-YR-zVnA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 482
+          "height": 481
         },
-        "outputId": "c999d132-aff9-4774-c687-82546f53fd75"
+        "outputId": "836e469b-6508-4c97-ee78-75a57fcc93ba"
       },
       "source": [
         "fig = plt.figure()\n",
@@ -687,13 +687,13 @@
         "maxind = np.argmax(accuracies)\n",
         "plt.scatter(shearconstraints[maxind], accuracies[maxind], c='red')"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f7ffd305bd0>"
+              "<matplotlib.collections.PathCollection at 0x7e9c9d0d9bd0>"
             ]
           },
           "metadata": {},
@@ -738,7 +738,7 @@
         "    nsample[ii] = rotate(shear(sample[ii], amt[ii]), angle[ii]) # first apply shear, then rotate\n",
         "  return np.squeeze(nsample) # take care if the input had only one sample."
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -757,7 +757,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cfabc6b5-8894-45d5-81be-34587785b479"
+        "outputId": "48f2335b-628a-4cee-d1f8-5526b47704d8"
       },
       "source": [
         "shearconstraints = [0, 0.2,0.4,0.6,0.8,1.0,1.2,1.4,1.6] # the values we want to test\n",
@@ -779,7 +779,7 @@
         "  accuracies[ii] = Accuracy(test_y, testpred)\n",
         "  print('Accuracy after augmentation shear:',hyp[ii][0], 'angle:',hyp[ii][1], ' is ', accuracies[ii], flush=True)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,6 +940,17 @@
         "\n",
         "Whenever you do any experiment, a good practice is to vary the hyperparameters gradually and create a graph of your results, like we did for gridsearch."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. The best value for angle contraint is 0 and shear constraint is 30. The accuracy increased by 0.0026\n",
+        "\n",
+        "2. Increasing the number of augmentations for each sample does not necessarily increase the accuracy. For example, in the above sample, the combining augmentations gave an accuracy of 0.6358 for shear 0.2 and angle 30; whereas, with angle 30 alone, the accuracy is 0.6737.\n"
+      ],
+      "metadata": {
+        "id": "NzUcMOeYJSQP"
+      }
     }
   ]
 }
