--- a/AIML_Module_1_Lab_3_Data_Augmentation.ipynb
+++ b/AIML_Module_1_Lab_3_Data_Augmentation.ipynb
@@ -970,14 +970,26 @@
     {
       "cell_type": "code",
       "source": [
-        "testpred = NN(testdata, testlabel, test_X)\n",
-        "print('Accuracy after rotation augmentation is ', Accuracy(test_y, testpred))"
+        "testpred = NN(train_X, train_y, test_X)\n",
+        "print('Accuracy with augmentation is ', Accuracy(test_y, testpred))"
       ],
       "metadata": {
-        "id": "YVGnUpk_eIGG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YVGnUpk_eIGG",
+        "outputId": "98e3a586-1158-4841-b085-30709055e970"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy with augmentation is  0.6472\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
