--- a/AIML_Module_1_Lab_4_Transforming_data_using_linear_algebra.ipynb
+++ b/AIML_Module_1_Lab_4_Transforming_data_using_linear_algebra.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "KBe4ZA32UTbv"
       },
@@ -36,8 +36,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "7mqG-dafVpya"
       },
       "outputs": [],
@@ -148,13 +149,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K8SCFKqfbM-l",
-        "outputId": "08e2b305-7782-477a-b50e-ffe69c856632"
+        "outputId": "d1113628-24aa-4c4f-aaa6-ae2caa5e2e82"
       },
       "outputs": [
         {
@@ -188,21 +189,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 879
+          "height": 882
         },
         "id": "jSuTaeSDQoYK",
-        "outputId": "5339f14b-b21b-4a78-a6f0-532300fedb9c"
+        "outputId": "aaf640af-321d-4dd1-b791-0a9b53e38010"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-3-eb238eeb2a58>:30: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+            "<ipython-input-2-eb238eeb2a58>:30: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
             "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
             "  transform = transform.astype(np.float)\n"
           ]
@@ -277,13 +278,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nE0NbpYIC9ou",
-        "outputId": "2b1a7d29-c88d-4277-ab5a-53f2af0059ce"
+        "outputId": "a506c591-7c1d-41ff-c4c6-69335ff344d2"
       },
       "outputs": [
         {
@@ -360,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "22ayl0sViF5-"
@@ -479,10 +480,10 @@
         "test_hole = np.array([getHolePixels(i).sum() for i in test_X])\n",
         "train_bound = np.array([getBoundaryPixels(i).sum() for i in train_X])\n",
         "test_bound = np.array([getBoundaryPixels(i).sum() for i in test_X])\n",
-        "# train_hull = np.array([getHullPixels(i).sum() for i in train_X])\n",
-        "# test_hull = np.array([getHullPixels(i).sum() for i in test_X])\n",
-        "# train_sum = np.sum(train_X, (1,2))/(28*28)\n",
-        "# test_sum = np.sum(test_X, (1,2))/(28*28)\n",
+        "train_hull = np.array([getHullPixels(i).sum() for i in train_X])\n",
+        "test_hull = np.array([getHullPixels(i).sum() for i in test_X])\n",
+        "train_sum = np.sum(train_X, (1,2))/(28*28)\n",
+        "test_sum = np.sum(test_X, (1,2))/(28*28)\n",
         "\n",
         "# create the train and test set by combining the appropriate features\n",
         "train_feats = np.vstack((train_hole,train_bound)).transpose()\n",
