--- a/AIML_Module_2_Lab1.ipynb
+++ b/AIML_Module_2_Lab1.ipynb
@@ -1108,7 +1108,7 @@
         "\n",
         ". Hardtop does not have very apparent whiskers, this can mean that all of the data is tightly clustered around the median and the price range is not very wide.\n",
         "\n",
-        ". Convertible seems to be distributed evenly adn so it is safe to assume that the data is normallly distributed for this body-style.\n"
+        ". Convertible seems to be distributed evenly and so it is safe to assume that the data is normally distributed for this body-style.\n"
       ],
       "metadata": {
         "id": "DAHh7MquMZQ_"
