--- a/AIML_Module_3_Lab_1_Understanding_Distance_metrics_and_Introduction_to_KNN.ipynb
+++ b/AIML_Module_3_Lab_1_Understanding_Distance_metrics_and_Introduction_to_KNN.ipynb
@@ -146,11 +146,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FYfCNWCryC-1",
-        "outputId": "203cca57-b7c5-456a-9efa-9ed09d76429a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 227
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e85770a6-5fce-4530-c4a9-bab63b46db86"
       },
       "source": [
         "## TASK-1\n",
@@ -160,20 +159,16 @@
         "\n",
         "# Write your code below and uncomment the lines below in order to run the cell.\n",
         "\n",
-        "euclidean_dist = np.sqrt(np.sum((x_1, x_2)**2))\n",
+        "euclidean_dist = np.sqrt(np.sum((x_1-x_2)**2))\n",
         "print(euclidean_dist)"
       ],
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-bd187285a79d>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Write your code below and uncomment the lines below in order to run the cell.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0meuclidean_dist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meuclidean_dist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'tuple' and 'int'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
           ]
         }
       ]
@@ -185,7 +180,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b7cacb00-f4ff-4253-cc1e-0879fd078e77"
+        "outputId": "b2173159-5f0e-4640-92b0-01e612ba8f3a"
       },
       "source": [
         "#@title Answer to Task-1\n",
@@ -193,7 +188,7 @@
         "euclidean_dist = np.sqrt(np.sum((x_1-x_2)**2))\n",
         "print(euclidean_dist)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
