--- a/AIML_Module_3_Lab_1_Understanding_Distance_metrics_and_Introduction_to_KNN.ipynb
+++ b/AIML_Module_3_Lab_1_Understanding_Distance_metrics_and_Introduction_to_KNN.ipynb
@@ -1045,7 +1045,7 @@
           "height": 363
         },
         "id": "jJNUUOszgKop",
-        "outputId": "e22d2918-2fa7-4cd8-94c1-bca6eee6738e"
+        "outputId": "d1ee5f4e-76ab-4449-9497-49cd5cef946f"
       },
       "source": [
         "from sklearn.datasets import load_iris\n",
@@ -1055,7 +1055,7 @@
         "data['target'] = pd.Series(iris.target)\n",
         "data.head(10)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,7 +1087,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-50d68e6b-f7c9-471c-8a19-ac2bfeb57019\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-730d81ba-f56e-4aa6-86e2-d9d3eb79edfe\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1200,7 +1200,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50d68e6b-f7c9-471c-8a19-ac2bfeb57019')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-730d81ba-f56e-4aa6-86e2-d9d3eb79edfe')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1252,12 +1252,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-50d68e6b-f7c9-471c-8a19-ac2bfeb57019 button.colab-df-convert');\n",
+              "        document.querySelector('#df-730d81ba-f56e-4aa6-86e2-d9d3eb79edfe button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-50d68e6b-f7c9-471c-8a19-ac2bfeb57019');\n",
+              "        const element = document.querySelector('#df-730d81ba-f56e-4aa6-86e2-d9d3eb79edfe');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1277,8 +1277,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-97de07c9-e1ad-423b-9c38-b0519e5d8836\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-97de07c9-e1ad-423b-9c38-b0519e5d8836')\"\n",
+              "<div id=\"df-95745531-5073-4cab-b16f-d6e4db099d22\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-95745531-5073-4cab-b16f-d6e4db099d22')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1397,7 +1397,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-97de07c9-e1ad-423b-9c38-b0519e5d8836 button');\n",
+              "        document.querySelector('#df-95745531-5073-4cab-b16f-d6e4db099d22 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1408,7 +1408,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 36
         }
       ]
     },
@@ -1427,7 +1427,7 @@
         "test_class = list(test_set.iloc[:,-1])\n",
         "train_class = list(train_set.iloc[:,-1])"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1439,7 +1439,7 @@
         "def dist_euclidean(X1,X2):\n",
         "    return distance.euclidean(X1,X2)"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1451,7 +1451,7 @@
         "def dist_cosine(X1,X2):\n",
         "    return distance.cosine(X1,X2)"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1463,7 +1463,7 @@
         "def dist_manhattan(X1,X2):\n",
         "    return distance.cityblock(X1,X2)"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1475,7 +1475,7 @@
         "def dist_chebyshev(X1,X2):\n",
         "    return distance.chebyshev(X1,X2)"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1485,7 +1485,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "314ccf16-0a0f-4eb5-db73-97e33b14b2e5"
+        "outputId": "e20a6c6c-8aa0-4e76-f5b8-47c405e2d246"
       },
       "source": [
         "metrics_list = [dist_euclidean,dist_cosine, dist_manhattan, dist_chebyshev]\n",
@@ -1498,7 +1498,7 @@
         "  print(100 * np.mean(our_predictions == test_class))\n",
         "  print()"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -1538,6 +1538,29 @@
         "2. Are there any conditions for a particular distance to be considered a \"distance metric\"?\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Answers:\n",
+        "\n",
+        "1. Similarity is a qualitative measure of how similar two entities are. It measures the extents of shared features between them.\n",
+        "\n",
+        "   Distance is a quantitative measure of degree of separation or dissimilarity.\n",
+        "\n",
+        "2.  4 conditions that a distance metric must satisfy are:\n",
+        "\n",
+        "    1) Non-negativity: The distance between any two entities can never be a negative value.\n",
+        "\n",
+        "    2) Identity: The distance between an object and itself must be 0.\n",
+        "\n",
+        "    3) Symmetry: The distance between 2 objects muct be the same regardless of the order in which they are considered.\n",
+        "\n",
+        "    4) Triangle inequality: The distance between 2 objects must not be greater than the sum of the distances from each of those objects to a third object."
+      ],
+      "metadata": {
+        "id": "MdnVJ0o-5Y2y"
+      }
     },
     {
       "cell_type": "markdown",
