--- a/AIML_Module_3_Lab_3_Using_KNN_for_Text_Classification_ipynb.ipynb
+++ b/AIML_Module_3_Lab_3_Using_KNN_for_Text_Classification_ipynb.ipynb
@@ -2197,6 +2197,33 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Answers:\n",
+        "\n",
+        "1. TF-IDF is genrally better than BoW because it is better at giving more importance and weightage to unique words and less to more common words. Morevover, it uses document frequency as a part of its calculations.\n",
+        "\n",
+        "2. Techniques that outperform BoW and TF-IDF are: Word embeddings, contextualized representations, graph neural networks, recurrent neural networks and convolutional neural network architectures.\n",
+        "\n",
+        "3.\n",
+        "\n",
+        "Stemming:\n",
+        "\n",
+        "Pros: Faster, computationally less expensive, easy to implement, reduces data size\n",
+        "\n",
+        "Cons: Can lead to oversimplification and incorrect word forms, may not preserve the grammatical context of words\n",
+        "\n",
+        "Lemmatization:\n",
+        "\n",
+        "Pros: More accurate, preserves the grammatical context of words, produces meaningful word forms\n",
+        "\n",
+        "Cons: Slower, computationally more demanding, more complex to implement"
+      ],
+      "metadata": {
+        "id": "U7LQyguP8KIL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Useful Resources for further reading\n",
         "1. Stemming and Lemmatization: https://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html\n",
         "2. TF-IDF and BoW : https://www.analyticsvidhya.com/blog/2020/02/quick-introduction-bag-of-words-bow-tf-idf/\n",
@@ -2205,15 +2232,6 @@
       "metadata": {
         "id": "T6xPL6smyWG-"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-uUw16_tkGdV"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
